Fall2025: card fix 5 (#139)
* update 1 done

* fall 2025 fix projects

* updated team

* fix team images

* check team images

* fix file path

* new cropped team images, new projects formatting

* changed formatting

* fix 1 for images

* add new images

* fix card height

* images on home page

* card size fix 1

* card fix 2

* card fix 3

* card fix 4

* card fix 5

--- a/src/sass/themes/_default.scss
+++ b/src/sass/themes/_default.scss
@@ -1,3 +1,10 @@
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 @keyframes slide {
     0% {
         width: 0;
